results/all_logs/hpccg_gpu_31038823.out

Due to MODULEPATH changes, the following have been reloaded:
  1) gcc/14.2.0

The following have been reloaded with a version change:
  1) cuda/13.2.1 => cuda/12.4.1

Sun Apr 26 12:39:24 2026       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 570.195.03             Driver Version: 570.195.03     CUDA Version: 12.8     |
|-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  NVIDIA L4                      On  |   00000000:81:00.0 Off |                    0 |
| N/A   20C    P8             15W /   70W |       0MiB /  23034MiB |      0%      Default |
|                                         |                        |                  N/A |
+-----------------------------------------+------------------------+----------------------+
                                                                                         
+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+
Compiling on compute node...
nvcc: NVIDIA (R) Cuda compiler driver
Copyright (c) 2005-2024 NVIDIA Corporation
Built on Thu_Mar_28_02:18:24_PDT_2024
Cuda compilation tools, release 12.4, V12.4.131
Build cuda_12.4.r12.4/compiler.34097967_0
rm -f *.o test_HPCCG_cuda
g++ -O3  -c main.cpp -o main.o
g++ -O3  -c generate_matrix.cpp -o generate_matrix.o
g++ -O3  -c read_HPC_row.cpp -o read_HPC_row.o
g++ -O3  -c compute_residual.cpp -o compute_residual.o
g++ -O3  -c mytimer.cpp -o mytimer.o
g++ -O3  -c dump_matlab_matrix.cpp -o dump_matlab_matrix.o
g++ -O3  -c make_local_matrix.cpp -o make_local_matrix.o
g++ -O3  -c exchange_externals.cpp -o exchange_externals.o
g++ -O3  -c YAML_Element.cpp -o YAML_Element.o
g++ -O3  -c YAML_Doc.cpp -o YAML_Doc.o
nvcc -O3 -arch=sm_89 -c kernels.cu -o kernels.o
In file included from /apps/compilers/cuda/12.4.1/bin/../targets/x86_64-linux/include/cuda_runtime.h:82,
                 from <command-line>:
/apps/compilers/cuda/12.4.1/bin/../targets/x86_64-linux/include/crt/host_config.h:143:2: error: #error -- unsupported GNU version! gcc versions later than 13 are not supported! The nvcc flag '-allow-unsupported-compiler' can be used to override this version check; however, using an unsupported host compiler may cause compilation failure or incorrect run time execution. Use at your own risk.
  143 | #error -- unsupported GNU version! gcc versions later than 13 are not supported! The nvcc flag '-allow-unsupported-compiler' can be used to override this version check; however, using an unsupported host compiler may cause compilation failure or incorrect run time execution. Use at your own risk.
      |  ^~~~~
make: *** [Makefile.cuda:29: kernels.o] Error 1
/var/spool/slurmd/job31038823/slurm_script: line 23: ./test_HPCCG_cuda: No such file or directory
/var/spool/slurmd/job31038823/slurm_script: line 24: ./test_HPCCG_cuda: No such file or directory
